--- a/themes/gophercon/layouts/sponsor/single.html
+++ b/themes/gophercon/layouts/sponsor/single.html
@@ -70,59 +70,43 @@
                 <div class="clearfix"></div>
             </div><!-- Diamond Sponsors End -->
 			{{ end }} 
-            <!---------- Platinum Sponsors 
+			{{ if eq "platinum"  .Params.sponsorclass}}
+			<!---------- Platinum Sponsors  -->
             <div class="col-md-12 platinum">
             	<img class="icon" src="/images/platinum.png" />
                 <h3>Platinum Sponsors</h3>
-                <a href="#"><img src="/images/temp-logos/ubuntu.png" /></a>
-                <a href="#"><img src="/images/temp-logos/github.png"/></a>
-                <a href="#"><img src="/images/temp-logos/paypal.png"/></a>
+				<a href="#"><img src="{{.Params.logo}}"/></a>
+				{{ .Content }}
                 <div class="clearfix"></div>
             </div>
-            
-            
+			{{ end }} 
+           {{ if eq "gold"  .Params.sponsorclass}}
             <div class="col-md-12 gold">
                 <img class="icon" src="/images/gold.png" />
                 <h3>Gold Sponsors</h3>
-                <a href="#"><img src="/images/temp-logos/digital-ocean.png"/></a>
-                <a href="#"><img src="/images/temp-logos/drama-fever.png"/></a>
-                <a href="#"><img src="/images/temp-logos/paypal.png"/></a>
-                <a href="#"><img src="/images/temp-logos/dena.png"/></a>
-                <a href="#"><img src="/images/temp-logos/ironio.png"/></a>
+				<a href="#"><img src="{{.Params.logo}}"/></a>
+				{{ .Content }}
                 <div class="clearfix"></div>
             </div>
-            
-            
+			{{ end }} 
+     		{{ if eq "silver"  .Params.sponsorclass}} 			
             <div class="col-md-12 silver">
                 <img class="icon" src="/images/silver.png" />
                 <h3>Silver Sponsors</h3>
-                <a href="#"><img src="/images/temp-logos/mongodb.png"/></a>
-                <a href="#"><img src="/images/temp-logos/twitch.png"/></a>
-                <a href="#"><img src="/images/temp-logos/oreilly.png"/></a>
-                <a href="#"><img src="/images/temp-logos/stackoverflow.png"/></a>
-                <a href="#"><img src="/images/temp-logos/ubuntu.png"/></a>
+				<a href="#"><img src="{{.Params.logo}}"/></a>
+				{{ .Content }}
                 <div class="clearfix"></div>
             </div>
-            
-            
+			{{ end }} 
+            {{ if eq "bronze"  .Params.sponsorclass}} 	
             <div class="col-md-12 bronze">
                 <img class="icon" src="/images/bronze.png" />
                 <h3>Bronze Sponsors</h3>
-                <a href="#"><img src="/images/temp-logos/datadog.png"/></a>
-                <a href="#"><img src="/images/temp-logos/digital-ocean.png"/></a>
-                <a href="#"><img src="/images/temp-logos/drama-fever.png"/></a>
-                <a href="#"><img src="/images/temp-logos/stackoverflow.png"/></a>
-                <a href="#"><img src="/images/temp-logos/cobenian.png"/></a>
-                <a href="#"><img src="/images/temp-logos/apcera.png"/></a>
-                <a href="#"><img src="/images/temp-logos/black.png"/></a>
-                <a href="#"><img src="/images/temp-logos/twitch.png"/></a>
-                <a href="#"><img src="/images/temp-logos/digital-ocean.png"/></a>
-                <a href="#"><img src="/images/temp-logos/drama-fever.png"/></a>
-                <a href="#"><img src="/images/temp-logos/paypal.png"/></a>
-                <a href="#"><img src="/images/temp-logos/dena.png"/></a>
+				<a href="#"><img src="{{.Params.logo}}"/></a>
+				{{ .Content }}
                 <div class="clearfix"></div>
-            </div>
-			--> 
+			</div>
+			{{ end }}
         </div><!-- sponsors col-md-10 -->
         
         <div class="sidebar col-md-2">
