--- a/themes/gophercon/layouts/taxonomy/sponsor.html
+++ b/themes/gophercon/layouts/taxonomy/sponsor.html
@@ -63,8 +63,12 @@
         	<!---------- Diamond Sponsors ---------->
             <div class="col-md-12 diamond">
             	<img class="icon" src="/images/diamond.png" />
-                <h3>Diamond Sponsors</h3>
-                <a href="#"><img src="/images/temp-logos/google.png" /></a>
+				<h3>Diamond Sponsors</h3>
+				{{ range .Data.Pages }}
+				{{ if eq "diamond"  .Params.sponsorclass}} 	
+				<a href="#"><img src="{{ .Params.logo }}" /></a>
+				{{end}}
+				{{ end }}
                 <div class="clearfix"></div>
             </div><!-- Diamond Sponsors End -->
             
