--- a/themes/gophercon/layouts/taxonomy/sponsor.html
+++ b/themes/gophercon/layouts/taxonomy/sponsor.html
@@ -59,72 +59,70 @@
 <main>
     <section class="row"> 
     	<div class="sponsors col-md-10">
-        
+        				{{ range .Data.Pages }}
+				{{ if eq "diamond"  .Params.sponsorclass}} 	
         	<!---------- Diamond Sponsors ---------->
             <div class="col-md-12 diamond">
             	<img class="icon" src="/images/diamond.png" />
 				<h3>Diamond Sponsors</h3>
-				{{ range .Data.Pages }}
-				{{ if eq "diamond"  .Params.sponsorclass}} 	
 				<a href="#"><img src="{{ .Params.logo }}" /></a>
-				{{end}}
-				{{ end }}
                 <div class="clearfix"></div>
             </div><!-- Diamond Sponsors End -->
-            
+            				{{end}}
+							{{ end }}
+
+				{{ range .Data.Pages }}
+				{{ if eq "platinum"  .Params.sponsorclass}} 	
             <!---------- Platinum Sponsors ---------->
             <div class="col-md-12 platinum">
             	<img class="icon" src="/images/platinum.png" />
                 <h3>Platinum Sponsors</h3>
-                <a href="#"><img src="/images/temp-logos/ubuntu.png" /></a>
-                <a href="#"><img src="/images/temp-logos/github.png"/></a>
-                <a href="#"><img src="/images/temp-logos/paypal.png"/></a>
+
+				<a href="#"><img src="{{ .Params.logo }}" /></a>
+
                 <div class="clearfix"></div>
             </div><!-- Platinum Sponsors End -->
-            
+            				{{end}}
+							{{ end }}
+				{{ range .Data.Pages }}
+				{{ if eq "gold"  .Params.sponsorclass}} 	
             <!---------- Gold Sponsors ---------->
             <div class="col-md-12 gold">
                 <img class="icon" src="/images/gold.png" />
                 <h3>Gold Sponsors</h3>
-                <a href="#"><img src="/images/temp-logos/digital-ocean.png"/></a>
-                <a href="#"><img src="/images/temp-logos/drama-fever.png"/></a>
-                <a href="#"><img src="/images/temp-logos/paypal.png"/></a>
-                <a href="#"><img src="/images/temp-logos/dena.png"/></a>
-                <a href="#"><img src="/images/temp-logos/ironio.png"/></a>
+
+				<a href="#"><img src="{{ .Params.logo }}" /></a>
+
                 <div class="clearfix"></div>
             </div><!-- Gold Sponsors End -->
-            
+            				{{end}}
+							{{ end }}
+				{{ range .Data.Pages }}
+				{{ if eq "silver"  .Params.sponsorclass}} 	
             <!---------- Silver Sponsors ---------->
             <div class="col-md-12 silver">
                 <img class="icon" src="/images/silver.png" />
                 <h3>Silver Sponsors</h3>
-                <a href="#"><img src="/images/temp-logos/mongodb.png"/></a>
-                <a href="#"><img src="/images/temp-logos/twitch.png"/></a>
-                <a href="#"><img src="/images/temp-logos/oreilly.png"/></a>
-                <a href="#"><img src="/images/temp-logos/stackoverflow.png"/></a>
-                <a href="#"><img src="/images/temp-logos/ubuntu.png"/></a>
+
+				<a href="#"><img src="{{ .Params.logo }}" /></a>
+
                 <div class="clearfix"></div>
             </div><!-- Silver Sponsors End -->
-            
+            				{{end}}
+							{{ end }}
+				{{ range .Data.Pages }}
+				{{ if eq "bronze"  .Params.sponsorclass}} 	
             <!---------- Bronze Sponsors ---------->
             <div class="col-md-12 bronze">
                 <img class="icon" src="/images/bronze.png" />
                 <h3>Bronze Sponsors</h3>
-                <a href="#"><img src="/images/temp-logos/datadog.png"/></a>
-                <a href="#"><img src="/images/temp-logos/digital-ocean.png"/></a>
-                <a href="#"><img src="/images/temp-logos/drama-fever.png"/></a>
-                <a href="#"><img src="/images/temp-logos/stackoverflow.png"/></a>
-                <a href="#"><img src="/images/temp-logos/cobenian.png"/></a>
-                <a href="#"><img src="/images/temp-logos/apcera.png"/></a>
-                <a href="#"><img src="/images/temp-logos/black.png"/></a>
-                <a href="#"><img src="/images/temp-logos/twitch.png"/></a>
-                <a href="#"><img src="/images/temp-logos/digital-ocean.png"/></a>
-                <a href="#"><img src="/images/temp-logos/drama-fever.png"/></a>
-                <a href="#"><img src="/images/temp-logos/paypal.png"/></a>
-                <a href="#"><img src="/images/temp-logos/dena.png"/></a>
+
+				<a href="#"><img src="{{ .Params.logo }}" /></a>
+
                 <div class="clearfix"></div>
             </div><!-- Bronze Sponsors End -->
-            
+            				{{end}}
+				{{ end }}
         </div><!-- sponsors col-md-10 -->
         
         <div class="sidebar col-md-2">
