--- a/themes/gophercon/layouts/partials/schedule.html
+++ b/themes/gophercon/layouts/partials/schedule.html
@@ -20,14 +20,17 @@
                 <div id="workshop-schedule" class="tab-pane schedule-tab active tab-pane-subtabs">
                   <ul class="nav nav-tabs">
                     <li role="presentation" class="active">
-                      <a data-toggle="tab" href="#bootcamp-schedule">Go Bootcamp</a>
+                      <a data-toggle="tab" href="#hardcore-go-schedule">Hardcore Go Workshop</a>
                     </li>
                     <li role="presentation" class="">
-                      <a data-toggle="tab" href="#workshop-tutorials-schedule">Workshop Track</a>
-				  </li>
+                      <a data-toggle="tab" href="#advanced-go-schedule">Advanced Go Workshop</a>
+                    </li>
+                    <li role="presentation" class="">
+                      <a data-toggle="tab" href="#building-api-schedule">Building an HTTP-based API with Go</a>
+				            </li>
                   </ul>
                   <div class="tab-content">
-                    <div id="bootcamp-schedule" class="schedule-tab schedule-item-tab tab-pane active">
+                    <div id="hardcore-go-schedule" class="schedule-tab schedule-item-tab tab-pane active">
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
                           <span class="time">9:00am - 5:00pm</span>
@@ -69,91 +72,41 @@
                         </div>
                       </div>
                     </div>
-                    <div id="workshop-tutorials-schedule" class="schedule-tab schedule-item-tab tab-pane">
+                    <div id="advanced-go-schedule" class="schedule-tab schedule-item-tab tab-pane">
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
                           <span class="time">9:00am - 10:45am</span>
-                          <span class="location">Room 302</span>
+                          <span class="location">Room 503</span>
                         </div>
                         <div class="col-md-9 schedule-item-details">
                           <div class="schedule-item-summary">
-                            <span class="title">Working with Data in Go</span>
+                            <span class="title">Advanced Go</span>
                             <div class="speaker">
-                              <span class="name">Cory LaNou</span>
-                              <span class="designation">InfluxDB</span>
+                              <span class="name">TBD</span>
+                              <span class="designation">TBD</span>
                             </div>
                           </div>
                           <div class="abstract">
-                            <p>Working with data is a core component of many applications, and Go has great support for working with many different types
-                              of databases. In this workshop, we will cover the use of MongoDB to store and retrieve data with the mgo driver. Following
-                              this, you will learn best practices for building packages and apps that work with and expose data from any database.</p>
-                            <p>
-                              <strong>Teacher:</strong>Cory LaNou (
-                              <a href="https://twitter.com/corylanou">@corylanou</a>)
-                              <br />Cory LaNou is a full stack web developer and entrepreneur with over 17 years of experience. After 11 years of being a successful
-                              serial entrepreneur, he has joined the InfluxDB team, working on building an open source time series database written in
-                              Go. He is active in the Go community, leading the Denver Gophers meetup, as well as mentoring students in his free time.</p>
-                          </div>
+                            <p>If you are seasoned Go developer and have even worked on a project or two, then this class is for you. In the first part of the class you will take a deep dive into the io package of the standard library. Learn about all there is to know to effectively use the io package. In the second part of the class, we will show you a much of the Go tooling we can to help you understand and debug your programs. <br /><br /> IO Package from top to bottom<br /> pprof<br /> Benchmarking and performance<br /> Memory tracing and comparing<br /> GODEBUG<br /> go-fuzz<br /> Go execution tracer <br/><br/>  <p>
+                              <strong>Teacher:</strong>TBD 
+                              </p>
+                           </div>
                         </div>
                       </div>
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
-                          <span class="time">11:00am - 12:45pm</span>
-                          <span class="location">Room 302</span>
+                          <span class="time">12:00pm - 1:00pm</span>
+                          <span class="location">Room 503</span>
                         </div>
                         <div class="col-md-9 schedule-item-details">
                           <div class="schedule-item-summary">
-                            <span class="title">Exploring Go's Utility Ecosystem</span>
+                            <span class="title">Break</span>
                             <div class="speaker">
-                              <span class="name">Kevin Gillette</span>
+                              <span class="name">In-Room Lunch</span>
                             </div>
                           </div>
                           <div class="abstract">
-                            <p>Discover the full breadth and depth of the Go development and analysis tools available today. We will explore the go tool,
-                              golint, oracle, profiling, and various other utilities that will bolster your efficiency and capabilities as a developer.
-                              If you know the language and libraries but haven't had time to peruse the toolchain, this is a great opportunity to learn
-                              about what you've been missing!</p>
-                            <p>
-                              <strong>Teacher:</strong>Kevin Gillette (
-                              <a href="https://twitter.com/kevingillette">@kevingillette</a>)
-                              <br />Kevin is an experienced software engineer that has enthusiastically used Go since 2012 to develop efficient, high-reliability
-                              backend systems. With a focus on breadth of knowledge, Kevin has expertise in a variety of languages and platforms, a firm
-                              grounding in theory, as well as a keen interest in computing history.</p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="row schedule-item">
-                        <div class="col-md-3 schedule-item-slot">
-                          <span class="time">1:30pm - 5:00pm</span>
-                          <span class="location">Room 302</span>
-                        </div>
-                        <div class="col-md-9 schedule-item-details">
-                          <div class="schedule-item-summary">
-                            <span class="title">HTTP - Web Apps and APIs</span>
-                            <div class="speaker">
-                              <span class="name">Mark Bates, Jeremy Saenz</span>
-                            </div>
-                          </div>
-                          <div class="abstract">
-                            <p>The Go standard library provides a lot of great utility for building web applications and APIs, but it can sometimes it
-                              can be difficult to figure out how to build things the “right” way. In this two part workshop Jeremy and Mark will walk you
-                              through build web applications and APIs using the standard library and a few third party packages to make building applications
-                              fun and easy. Over the two parts Mark and Jeremy will build a web application with an Angular front-end that talks JSON to
-                              Go. Middleware, rendering, error handling, routing, testing, and more will covered.</p>
-                            <p>
-                              <strong>Teacher:</strong>Mark Bates (
-                              <a href="https://twitter.com/markbates">@markbates</a>)
-                              <br />Mark Bates is the founder and chief architect of the Boston, MA based consulting company, Meta42 Labs. Mark spends his days
-                              focusing on new application development and consulting for his clients. At night he writes books, raises kids, and occasionally
-                              he forms a band and "tries to make it". Mark is the author of three books, "Distributed Programming with Ruby" (2009), "Programming
-                              in CoffeeScript" (2012), and "Conquering the Command Line" (2014). He also runs the weekly Golang screencast site,
-                              <a href="http://www.metacasts.tv">www.metacasts.tv</a>.</p>
-                            <p>
-                              <strong>Teacher:</strong>Jeremy Saenz (
-                              <a href="https://twitter.com/codegangsta">@codegangsta</a>)
-                              <br />Jeremy, AKA Code Gangsta, is a fellow Gopher, author, speaker and screencaster. You have probably heard about one of his
-                              open source projects like Martini, Negroni, Gin, CLI and others. Jeremy is also the voice behind
-                              <a href="http://gophercasts.io">GopherCasts.io</a>and loves teaching people about technology through his programming screencasts.</p>
+                            <p>Catered lunch will be provided in the training room. Beverage service will be continuous throughout the day.</p>
                           </div>
                         </div>
                       </div>
@@ -163,10 +116,75 @@
                           <img src="/images/temp-logos/ardan.png" width="100" />
                         </div>
                         <div class="col-md-9">
-                          <p>This track is a series of highly focused workshops to further your Go knowledge by using Go in practice. They are taught
+                          <p>This workshop is an advanced class on using Go. It is taught
                             by a number of renowned community members and provided by
-                            <a href="https://ardanlabs.com">Ardan Labs.</a>. Tickets for this workshop can be purchased at an additional cost.</p>
-                          <a href="https://ti.to/gophercon/gophercon-2015"
+                            <a href="https://ardanlabs.com">Ardan Labs.</a>. Tickets for this workshop can be purchased at an additional cost, and do not include admission to the main conference.</p>
+                          <a href="https://ti.to/gophercon/gophercon-2016"
+                          class="btn btn-orange" target="_blank">Purchase Tickets <span  class="fa fa-arrow-circle-right"></span></a>
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div id="building-api-schedule" class="schedule-tab schedule-item-tab tab-pane">
+                      <div class="row schedule-item">
+                        <div class="col-md-3 schedule-item-slot">
+                          <span class="time">9:00am - 5:00am</span>
+                          <span class="location">Room 505</span>
+                        </div>
+                        <div class="col-md-9 schedule-item-details">
+                          <div class="schedule-item-summary">
+                            <span class="title">Building an HTTP-based API in Go</span>
+                            <div class="speaker">
+                              <span class="name">Brian Ketelsen</span>
+                              <span class="designation">backplane.io</span>
+                              <span class="name">Raphael Simon</span>
+                              <span class="designation">Rightscale</span>
+                            </div>
+                          </div>
+                          <div class="abstract">
+                            <p>Learn the fundamentals of building, deploying, monitoring and maintaining an HTTP based API in Go. We'll start with the important lessons learned managing an API at scale and work through all the phases of API development. Then we'll use a few different methods to build a Go API, highlighting the pros and cons of each method. Finally, we'll cover deployment options, load balancing, monitoring, and API versions.</p>
+                            
+                            <p>
+                              <strong>Teacher:</strong>Brian Ketelsen (
+                              <a href="https://twitter.com/bketelsen">@bketelsen</a>)
+                              <br />Brian Ketelsen is a co-author of <strong>Go in Action</strong>, and an early adopter of Go.  Brian has been using Go in production API's since 2011. 
+                              He is currently at [backplane.io](https://backplane.io) as a Principal Operations Engineer.</p>
+                            <p>
+                              <strong>Teacher:</strong>Raphael Simon (
+                              <a href="https://twitter.com/rgsimon">@rgsimon</a>)
+                              <br />Raphael Simon is a Systems Architect at RightScale where he’s been designing many of the systems that make up the platform for the past 8 years.
+                                Prior to that role Simon worked as a lead engineer at Eiffel Software on the Eiffel language compiler and libraries and as a principal engineer at Citrix on the GoTo line of products.
+                                Simon received his MS in Computer Science and Applied Mathematics at ENSEEIHT, France.</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row schedule-item">
+                        <div class="col-md-3 schedule-item-slot">
+                          <span class="time">12:00pm - 1:00pm</span>
+                          <span class="location">Room 505</span>
+                        </div>
+                        <div class="col-md-9 schedule-item-details">
+                          <div class="schedule-item-summary">
+                            <span class="title">Break</span>
+                            <div class="speaker">
+                              <span class="name">In-Room Lunch</span>
+                            </div>
+                          </div>
+                          <div class="abstract">
+                            <p>Catered lunch will be provided in the training room. Beverage service will be continuous throughout the day.</p>
+                          </div>
+                        </div>
+                      </div>
+                      <hr />
+                      <div class="row">
+                        <div class="col-md-3 text-right">
+                          <img src="/images/gopheracademy-logo.png" width="100" />
+                        </div>
+                        <div class="col-md-9">
+                          <p>This event is a highly focused lessons on using Go to deliver an HTTP based API. It is taught
+                            by renowned community members and provided by
+                            <a href="https://www.gopheracademy.com">Gopher Academy.</a>. Tickets for this workshop can be purchased at an additional cost, and do not include admission to the main conference.</p>
+                          <a href="https://ti.to/gophercon/gophercon-2016"
                           class="btn btn-orange" target="_blank">Purchase Tickets <span  class="fa fa-arrow-circle-right"></span></a>
                           </p>
                         </div>
